<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.jikexueyuan.notes.insertActivity">

    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="#3d80f5">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:text="@string/tv_text"
                android:layout_height="wrap_content"/>

        <EditText
                android:layout_width="match_parent"
                android:id="@+id/etInsertTime"
                android:hint="@string/et_hint"
                android:inputType="number"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:text="@string/tv_event"
                android:layout_height="wrap_content"/>

        <EditText
                android:layout_width="match_parent"
                android:id="@+id/etInsertEvent"
                android:hint="@string/et_event"
                android:inputType="text"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_enent"
            android:id="@+id/btnInsert"
            android:layout_gravity="right"/>


</LinearLayout>
